--- a/proyectoSomnolenciaFinal/requirements.txt
+++ b/proyectoSomnolenciaFinal/requirements.txt
@@ -12,6 +12,7 @@ distlib==0.3.9
 filelock==3.16.1
 flatbuffers==24.12.23
 fonttools==4.55.4
+fpdf==1.7.2
 jax==0.5.0
 jaxlib==0.5.0
 kiwisolver==1.4.8
